--- a/HOMEWORK 1a.html
+++ b/HOMEWORK 1a.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>lesson#1ahomework</title>
-//***************STYLE PAGE**************//
+<!--***************STYLE PAGE**************-->
     <style>
         .a{
             margin-left: 8px;
         }
     </style>
-//***************STYLE PAGE**************//
+<!--***************STYLE PAGE**************-->
 </head>
 <body>
 
