--- a/HOMEWORK 1a.html
+++ b/HOMEWORK 1a.html
@@ -18,7 +18,7 @@
 <br>
 &nbsp;
 <br>
-<img src="image/my%20photo.jpg" width="245px" alt="">
+<img src="image/my%20photo.jpg" width="245px" alt="myPhoto">
 <h2 class="a">My contact:</h2>
 <p>&nbsp; _______________</p>
 <ul>
