--- a/classwork 2b.html
+++ b/classwork 2b.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="classwork%202b.css">
 </head>
 <body>
+<img src="image/kate-hush-neon-lights.gif" class="lag">
 <div class="general">
 
 <div  class="button1">Your Name</div>
