--- a/classwork lesson 3/classwork lesson3-1.html
+++ b/classwork lesson 3/classwork lesson3-1.html
@@ -1,60 +1,100 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="classwork%20lesson3-1.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/7cf9f6628b.js" crossorigin="anonymous"></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="classwork%20lesson3-1.css">
 </head>
+
+
 <body>
 
-<div class="blockGeneral">
-    <div id="block1">
 
-        <div class="b1">
+<div class="container">
+<!--************************************************************-->
+<div class="card-menu1">
 
-            <h2 class="h2">Web Designing </h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci assumenda cumque eos, error est
-                fugit iste mollitia necessitatibus obcaecati, odit officia praesentium quas quisquam repellendus unde
-                velit voluptate, voluptatum! </p>
-            <span><i class="far fa-edit fa-4x"></i></span>
-
+        <div class="card">
+                <div class="icon"><i class="fas fa-pencil-ruler fa-3x"></i></div>
+            <div class="card-content">
+                <h3>Web Designing</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eius sed voluptate. Amet atque
+                    deserunt dicta doloremque iste libero, odio!
+                </p>
+            </div>
         </div>
-        <div class="b2">
-            <h2 class="h2">Conversion Services</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci assumenda cumque eos, error est
-                fugit iste mollitia necessitatibus obcaecati, odit officia praesentium quas quisquam repellendus unde
-                velit voluptate, voluptatum! </p>
-                    </div>
-        <div class="b3">
-            <h2 class="h2">Logo & Identity Designs</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci assumenda cumque eos, error est
-                fugit iste mollitia necessitatibus obcaecati, odit officia praesentium quas quisquam repellendus unde
-                velit voluptate, voluptatum! </p>
-        </div>
-    </div>
 
-    <div id="block2">
-
-        <div class="b4">
-            <h2 class="h2">Web Development</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci assumenda cumque eos, error est
-                fugit iste mollitia necessitatibus obcaecati, odit officia praesentium quas quisquam repellendus unde
-                velit voluptate, voluptatum! </p>
-        </div>
-        <div class="b5">
-            <h2 class="h2">WordPress Development</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci assumenda cumque eos, error est
-                fugit iste mollitia necessitatibus obcaecati, odit officia praesentium quas quisquam repellendus unde
-                velit voluptate, voluptatum! </p>
-        </div>
-        <div class="b6">
-            <h2 class="h2">Social Media & Ads Designs</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci assumenda cumque eos, error est
-                fugit iste mollitia necessitatibus obcaecati, odit officia praesentium quas quisquam repellendus unde
-                velit voluptate, voluptatum! </p>
+    <div class="card">
+        <div class="icon"><i class="fas fa-pencil-ruler fa-3x"></i></div>
+        <div class="card-content">
+            <h3>Conversion Services</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eius sed voluptate. Amet atque
+                deserunt dicta doloremque iste libero, odio!
+            </p>
         </div>
     </div>
+
+    <div class="card">
+        <div class="icon"><i class="fas fa-pencil-ruler fa-3x"></i></div>
+        <div class="card-content">
+            <h3>Logo&Identity Designs</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eius sed voluptate. Amet atque
+                deserunt dicta doloremque iste libero, odio!
+            </p>
+    </div>
+ </div>
 </div>
+<!--************************************************************-->
+<div class="card-menu2">
+
+    <div class="card">
+        <div class="icon"><i class="fas fa-pencil-ruler fa-3x"></i></div>
+        <div class="card-content">
+            <h3>Web Development</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eius sed voluptate. Amet atque
+                deserunt dicta doloremque iste libero, odio!
+            </p>
+        </div>
+    </div>
+
+
+    <div class="card">
+        <div class="icon"><i class="fas fa-pencil-ruler fa-3x"></i></div>
+        <div class="card-content">
+            <h3>WordPress  Development</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eius sed voluptate. Amet atque
+                deserunt dicta doloremque iste libero, odio!
+            </p>
+        </div>
+    </div>
+
+<div class="card">
+        <div class="icon"><i class="fas fa-pencil-ruler fa-3x"></i></div>
+        <div class="card-content">
+            <h3>Social Media & Ads Designs</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque eius sed voluptate. Amet atque
+                deserunt dicta doloremque iste libero, odio!
+            </p>
+        </div>
+    </div>
+
+
+</div>
+
+
+
 </body>
+
 </html>
+
+
