--- a/classwork lesson 3/classwork lesson3-2.html
+++ b/classwork lesson 3/classwork lesson3-2.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="classwork%20lesson3-2.css">
+    <script src="https://kit.fontawesome.com/7cf9f6628b.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <audio controls autoplay loop>
-    <source src=""
+    <source src="Johnny%20Branchizio%20-%20Jazz%20Minor%20Blus%20in%20F%20(Blues%202021)_(newmp3.org).mp3"
             type="audio/ogg">
 </audio>
 
-<div class="mother">
-    <div class="round1"></div>
-    <div class="round2"></div>
-    <div class="round3"></div>
 
-</div>
 
 
 <div class="father">
@@ -24,18 +20,21 @@
 
 
 
+
     <div class="box1">
+        <div class="round1"><i class="fas fa-user-astronaut fa-4x"></i></div>
         <h3>User Interface Desigh</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, sint.
         </p>
         <div class="box1Small">
             <p>Learn More</p>
-        </div>
     </div>
 
+    </div>
 
     <div class="box2">
+        <div class="round2"><i class="fas fa-satellite-dish fa-4x"></i></div>
         <h3>User Interface Desigh</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, sint.
@@ -47,6 +46,7 @@
 
 
     <div class="box3">
+        <div class="round3"><i class="fas fa-meteor fa-4x"></i></div>
         <h3>User Interface Desigh</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, sint.
