--- a/classwork lesson 3/classwork3-2last.html
+++ b/classwork lesson 3/classwork3-2last.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="classwork%20lesson3-2.css">
+</head>
+<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="classwork3-2last.css">
     <script src="https://kit.fontawesome.com/7cf9f6628b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -29,7 +36,7 @@
         </p>
         <div class="box1Small">
             <p>Learn More</p>
-    </div>
+        </div>
 
     </div>
 
@@ -60,5 +67,7 @@
 </div>
 
 
+</body>
+</html>
 </body>
 </html>
