--- a/JS/HOMEWORK/Lesson 11 DOM/11.html
+++ b/JS/HOMEWORK/Lesson 11 DOM/11.html
@@ -9,8 +9,10 @@
 <button class="btn1">NAME</button>
 <br>
 <br>
-<input type="text" value="" class="input2">
+<input type="number" value="" class="input2">
 <button class="btn2">AGE</button>
+<br>
+<br>
 
 
 
