--- a/JS/HOMEWORK/Lesson 11 DOM/11.html
+++ b/JS/HOMEWORK/Lesson 11 DOM/11.html
@@ -5,15 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-<input type="text" value="" class="input1">
-<button class="btn1">NAME</button>
-<br>
-<br>
-<input type="number" value="" class="input2">
-<button class="btn2">AGE</button>
+<!--<input type="text" value="" class="input1">-->
+<!--<button class="btn1">NAME</button>-->
+<!--<br>-->
+<!--<br>-->
+<!--<input type="number" value="" class="input2">-->
+<!--<button class="btn2">AGE</button>-->
 
-<br>
-<br>
+<!--<br>-->
+<!--<br>-->
 
 <form action="" name="carCatalog">
 <label>Model Car:
@@ -34,6 +34,7 @@
     <button id ='btn3'>SEND</button>
 
 </form>
+
 
 <script src="11.js"></script>
 </body>
