--- a/JS/HOMEWORK/Lesson 11 DOM/11.html
+++ b/JS/HOMEWORK/Lesson 11 DOM/11.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<!--<input type="text" value="" class="input1">-->
-<!--<button class="btn1">NAME</button>-->
-<!--<br>-->
-<!--<br>-->
-<!--<input type="number" value="" class="input2">-->
-<!--<button class="btn2">AGE</button>-->
-
-<!--<br>-->
-<!--<br>-->
+<form action="" name="form1">
+    <input name="name" type="text">
+    <br>
+    <br>
+    <input name="age" type="number">
+    <br>
+    <br>
+    <button class="btn1">Click me</button>
+    <br>
+    <br>
+</form>
 
 <form action="" name="carCatalog">
 <label>Model Car:
@@ -31,7 +33,7 @@
     </label>
     <br>
     <br>
-    <button id ='btn3'>SEND</button>
+    <button id ='btn2'>SEND</button>
 
 </form>
 
