--- a/JS/HOMEWORK/Lesson 10 DOM/10.html
+++ b/JS/HOMEWORK/Lesson 10 DOM/10.html
@@ -5,12 +5,26 @@
     <title>Title</title>
 </head>
 <body>
-<button id="btn1">btn1</button>
-<button id="btn2">btn2</button>
+
+<input type="text" id="age">
+<input type="button" id="button1" value="Перевірити введений вік">
+
+
+<hr>
+<div class="menu">
+    <h4 class="title">Список справ на день! НАТИСНИ МЕНЕ</h4>
+    <ul>
+        <li>Перегляд передлекційних відео</li>
+        <li>Домашня робота по Event</li>
+        <li>Лекція від Сергія</li>
+        <li>Практична та додаткове до 03.00 ночі =)</li>
+    </ul>
+</div>
+<hr>
 
 
 
-
+<div id="content"></div>
 <script src="10.js"></script>
 </body>
 </html>
