--- a/JS/CLASSWORK/Lesson 12 DOM/12.html
+++ b/JS/CLASSWORK/Lesson 12 DOM/12.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="12.css">
     <title>Title</title>
+
 </head>
 <body>
 <script src="12.js"></script>
