--- a/JS/CLASSWORK/Lesson 12 DOM/12 additional.html
+++ b/JS/CLASSWORK/Lesson 12 DOM/12 additional.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+
+.btn1{
+    display: flex;
+    height: 20px;
+    width: 150px;
+    justify-content: center;
+}
+
+</style>
 <body>
 <script src="12%20additional.js"></script>
 </body>
