--- a/JS/CLASSWORK/Lesson 12 DOM/12 additional.html
+++ b/JS/CLASSWORK/Lesson 12 DOM/12 additional.html
@@ -6,13 +6,14 @@
 </head>
 <style>
 
-.btn1{
-    display: flex;
-    height: 20px;
-    width: 150px;
-    justify-content: center;
-}
 
+.posts{
+    font-family:Tahoma;
+    font-size: 10px;
+    background: tomato;
+    font-style: italic;
+
+}
 </style>
 <body>
 <script src="12%20additional.js"></script>
