sort all files in the folder

--- a/HTML/CLASSWORK/Lesson#2/classwork 2b.html
+++ b/HTML/CLASSWORK/Lesson#2/classwork 2b.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="classwork%202b.css">
 </head>
 <body>
-<img src="../../image/kate-hush-neon-lights.gif" class="lag">
+<img src="../../../image/kate-hush-neon-lights.gif" class="lag">
 
 <div class="general">
 
